src/objects/Product_at_Risk__c.object
<CustomObject>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Distributor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Products at Risk</relationshipLabel>
        <relationshipName>Products_at_Risk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products at Risk</relationshipLabel>
        <relationshipName>Products_at_Risk</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <label>Risk</label>
        <referenceTo>Risk__c</referenceTo>
        <relationshipLabel>Products at Risk</relationshipLabel>
        <relationshipName>Products_at_Risk</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Quantity__c * Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Product at Risk</label>
    <nameField>
        <displayFormat>PAR-{0000}</displayFormat>
        <label>Product at Risk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products at Risk</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>